--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,58 @@
-cat > .gitignore << 'EOF'
-# macOS
+# =============== ANGULAR (frontend) ===============
+
+# Compiled output
+/frontend/dist
+/frontend/tmp
+/frontend/out-tsc
+/frontend/bazel-out
+
+# Node
+/frontend/node_modules
+/frontend/npm-debug.log
+/frontend/yarn-error.log
+
+# IDEs and editors
+/frontend/.idea/
+frontend/.project
+frontend/.classpath
+frontend/.c9/
+frontend/*.launch
+/frontend/.settings/
+/frontend/*.sublime-workspace
+
+# Visual Studio Code
+/frontend/.vscode/*
+!/frontend/.vscode/settings.json
+!/frontend/.vscode/tasks.json
+!/frontend/.vscode/launch.json
+!/frontend/.vscode/extensions.json
+/frontend/.history/*
+
+# Miscellaneous
+/frontend/.angular/cache
+/frontend/.sass-cache/
+/frontend/connect.lock
+/frontend/coverage
+/frontend/libpeerconnection.log
+/frontend/testem.log
+/frontend/typings
+/frontend/__screenshots__/
+
+# System files
+/frontend/.DS_Store
+/frontend/Thumbs.db
+
+
+# =============== PYTHON (backend) ===============
+
+/backend/__pycache__/
+/backend/.venv/
+/backend/env/
+/backend/*.pyc
+/backend/.env
+
+
+# =============== GERAL / SISTEMA ===============
+
 .DS_Store
-
-# Angular
-frontend/node_modules
-frontend/dist
-frontend/.angular
-frontend/.env
-frontend/*.log
-
-# Python
-backend/__pycache__/
-backend/.venv/
-backend/env/
-backend/*.pyc
-backend/.env
-EOF
+Thumbs.db
