--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 ENV=dev
 API_PREFIX=/api/v1
 FRONTEND_ORIGIN=http://localhost:4200
-DATABASE_URL=postgresql+asyncpg://uneondb_owner:npg_iTJYVDQm6g4k@ep-proud-star-ag25ss9j-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL=postgresql+asyncpg://uneondb_owner:PASSWORD@ep-proud-star-ag25ss9j-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
