--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,61 @@
 # =============== ANGULAR (frontend) ===============
 
 # Compiled output
-/frontend/dist
-/frontend/tmp
-/frontend/out-tsc
-/frontend/bazel-out
+frontend/dist
+frontend/tmp
+frontend/out-tsc
+frontend/bazel-out
 
 # Node
-/frontend/node_modules
-/frontend/npm-debug.log
-/frontend/yarn-error.log
+frontend/node_modules
+frontend/npm-debug.log
+frontend/yarn-error.log
 
 # IDEs and editors
-/frontend/.idea/
+frontend/.idea/
 frontend/.project
 frontend/.classpath
 frontend/.c9/
 frontend/*.launch
-/frontend/.settings/
-/frontend/*.sublime-workspace
+frontend/.settings/
+frontend/*.sublime-workspace
 
 # Visual Studio Code
-/frontend/.vscode/*
-!/frontend/.vscode/settings.json
-!/frontend/.vscode/tasks.json
-!/frontend/.vscode/launch.json
-!/frontend/.vscode/extensions.json
-/frontend/.history/*
+frontend/.vscode/*
+!frontend/.vscode/settings.json
+!frontend/.vscode/tasks.json
+!frontend/.vscode/launch.json
+!frontend/.vscode/extensions.json
+frontend/.history/*
 
 # Miscellaneous
-/frontend/.angular/cache
-/frontend/.sass-cache/
-/frontend/connect.lock
-/frontend/coverage
-/frontend/libpeerconnection.log
-/frontend/testem.log
-/frontend/typings
-/frontend/__screenshots__/
+frontend/.angular/cache
+frontend/.sass-cache/
+frontend/connect.lock
+frontend/coverage
+frontend/libpeerconnection.log
+frontend/testem.log
+frontend/typings
+frontend/__screenshots__/
 
-# System files
-/frontend/.DS_Store
-/frontend/Thumbs.db
+# System files (frontend)
+frontend/.DS_Store
+frontend/Thumbs.db
 
 
 # =============== PYTHON (backend) ===============
 
-/backend/__pycache__/
-/backend/app/schemas/__pycache__
-/backend/.venv/
-/backend/env/
-/backend/*.pyc
-/backend/.env
+# Python cache (ignores ANY __pycache__ in backend)
+backend/**/__pycache__/
+backend/**/*.pyc
+
+# Virtual environments
+backend/.venv/
+backend/env/
+
+# Environment variables
+backend/.env
+backend/*.env
 
 
 # =============== GERAL / SISTEMA ===============
