.env.example com jwt configs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,6 @@ ENV=dev
 API_PREFIX=/api/v1
 FRONTEND_ORIGIN=http://localhost:4200
 DATABASE_URL=postgresql+asyncpg://uneondb_owner:PASSWORD@ep-proud-star-ag25ss9j-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+
+JWT_SECRET=strong-jwt-key
+ACCESS_TOKEN_EXPIRE_MINUTES=time-of-token-in-minutes
