.env.example upgraded with refresh token

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,4 @@ DATABASE_URL=postgresql+asyncpg://uneondb_owner:PASSWORD@ep-proud-star-ag25ss9j-
 
 JWT_SECRET=your-strong-password
 ACCESS_TOKEN_EXPIRE_MINUTES=time-of-token-in-minutes
+JWT_REFRESH_EXPIRE_DAYS=time-of-refresh-token-in-days
