--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "chart.js": "^4.5.1"
+    "chart.js": "^4.5.1",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.41"
